--- a/python_indrajala/examples/indrajala.sample.toml
+++ b/python_indrajala/examples/indrajala.sample.toml
@@ -1,23 +1,30 @@
 # Provisional main config
 
+# Indrajala main application and async scheduler
 [indrajala]
 application="default"
 systemd=false
 modules=["in_async_mqtt","in_postgresql","in_signal_server"]
 
+# Signal server makes sure that only one instance of indrajala
+# is running per host (using a default socket). It cana shutdown
+# other instances (see -k startup option)
 [in_signal_server]
 active=true
 signal_port=17417
 
+# Postgresql storage
 [in_postgresql]
 active=true
-connection=""
+connection="host='database-hostname' dbname='testdb' user='some-user'"
 
+# Alternative storage backend based on files
 [in_indrajala]
 active=false
 rootpath=""
 
+# MQTT interface based on PAHO MQTT
 [in_async_mqtt]
 active=true
-broker="hostname-of-mqtt-server"
+broker="mqtt-server-hostname"
 topics=["#"]
