Better dataset-description and parsing

--- a/python_indrajala/examples/importers/data_sources/11000yearsunspotnumber.toml
+++ b/python_indrajala/examples/importers/data_sources/11000yearsunspotnumber.toml
@@ -1,6 +1,5 @@
 [citation]
 title="Solanki et al. 2004 11,000 Year Sunspot Number Reconstruction"
-short_title="sunspots11000yrs"
 description="Records of changes in solar irradiance, volcanic aerosols, atmospheric trace gases, and other properties thought to influence climate in the past. Parameter keywords describe what was measured in this data set. Additional summary information can be found in the abstracts of papers listed in the data set citations."
 authors=["Solanki, S.K.", "Usoskin, I.G.", "Kromer, B.", "Schuessler, M.", "Beer, J."]
 publication_date="2004-10-28"
@@ -11,7 +10,5 @@ version=""
 data_source="https://www.ncei.noaa.gov/pub/data/paleo/climate_forcing/solar_variability/solanki2004-ssn.txt"
 related_publications=["https://www.ncei.noaa.gov/access/paleo-search/study/5780"]
 
-[transform]
-downloader_transforms="decode_latin1"
-csv_skiprows=70
-csv_separator=" "
+[datasets]
+sunspots11000yrs="decode_latin1,extract_lines(70:),csv_separator(' ')"
