--- a/python_indrajala/examples/importers/data_sources/DWDGermanJuneMeanTemperature.toml
+++ b/python_indrajala/examples/importers/data_sources/DWDGermanJuneMeanTemperature.toml
@@ -1,6 +1,5 @@
 [citation]
 title="Zeitreihen fuer Gebietsmittel fuer Bundeslaender und Kombinationen von Bundeslaender, erstellt am: 20220702"
-short_title="germany_june_meantemp"
 description=""
 authors=["DWD OpenData"]
 publication_date="2022-07-02"
@@ -10,8 +9,5 @@ version=""
 data_source="https://opendata.dwd.de/climate_environment/CDC/regional_averages_DE/monthly/air_temperature_mean/regional_averages_tm_06.txt"
 related_publications=["https://opendata.dwd.de/climate_environment/CDC/"]
 
-[transform]
-downloader_transforms="decode"
-csv_skiprows=1
-csv_separator=";"
-
+[datasets]
+germany_june_meantemp="decode_utf8,extract_lines(2:),csv_separator(';')"
