--- a/python_indrajala/examples/importers/data_sources/DWDGermanJuneMeanTemperature.toml
+++ b/python_indrajala/examples/importers/data_sources/DWDGermanJuneMeanTemperature.toml
@@ -10,4 +10,4 @@ data_source="https://opendata.dwd.de/climate_environment/CDC/regional_averages_D
 related_publications=["https://opendata.dwd.de/climate_environment/CDC/"]
 
 [datasets]
-germany_june_meantemp=[["decode", "utf-8"],["extract_lines",2],["csv_separator", ';']]
+germany_june_meantemp=[["decode", "utf-8"],["extract_lines",2],["pandas_csv_separator", ';']]
