--- a/python_indrajala/examples/importers/data_sources/SunspotsMonthlyMean.toml
+++ b/python_indrajala/examples/importers/data_sources/SunspotsMonthlyMean.toml
@@ -11,4 +11,4 @@ data_source="https://www.sidc.be/silso/DATA/SN_m_tot_V2.0.txt"
 related_publications=["https://www.sidc.be/silso/infosnmtot"]
 
 [datasets]
-sunspotsmonthlymean1749=[["decode","utf-8"],["add_prefix","Year Month FracYear MonthlyMean StdDev ObsCount"], ["replace", " *", "  "], ["csv_separator", " "]]
+sunspotsmonthlymean1749=[["decode","utf-8"],["add_prefix","Year Month FracYear MonthlyMean StdDev ObsCount"], ["replace", " *", "  "], ["pandas_csv_separator_nan", " ",-1]]
