--- a/python_indrajala/examples/importers/data_sources/EarlyCenozoicLiverwortBryocarbCO2Data.toml
+++ b/python_indrajala/examples/importers/data_sources/EarlyCenozoicLiverwortBryocarbCO2Data.toml
@@ -11,4 +11,5 @@ data_source="https://www.ncei.noaa.gov/pub/data/paleo/climate_forcing/trace_gase
 related_publications=["https://www.ncei.noaa.gov/access/paleo-search/study/23250"]
 
 [datasets]
+Note="There is TXT version, but it is corrupted by random line-breakes, hence XLS"
 CenozoicCO2=[["pandas_excel"]]
