--- a/python_indrajala/examples/importers/data_sources/EarlyCenozoicLiverwortBryocarbCO2Data.toml
+++ b/python_indrajala/examples/importers/data_sources/EarlyCenozoicLiverwortBryocarbCO2Data.toml
@@ -10,6 +10,7 @@ version=""
 data_source="https://www.ncei.noaa.gov/pub/data/paleo/climate_forcing/trace_gases/Paleo-pCO2/liverwort_fletcher_2008.xlsx"
 related_publications=["https://www.ncei.noaa.gov/access/paleo-search/study/23250"]
 Note="There is TXT version, but it is corrupted by random line-breakes, hence XLS"
+tags=['co2']
 
 [datasets]
 CenozoicCO2=[["pandas_excel_rowskips", [0,1]]]
