--- a/python_indrajala/examples/importers/data_sources/MaunaLoaCO2MonthlyMean.toml
+++ b/python_indrajala/examples/importers/data_sources/MaunaLoaCO2MonthlyMean.toml
@@ -9,6 +9,7 @@ id=""
 version=""
 data_source="https://gml.noaa.gov/webdata/ccgg/trends/co2/co2_mm_mlo.csv"
 related_publications=["https://gml.noaa.gov/ccgg/trends/data.html"]
+tags=['co2', 'mauna_loa', 'direct_measurement']
 
 [datasets]
 MaunaLoaMonthlyCO2=[["decode","utf-8"],["extract_lines", 52],["pandas_csv_separator_nan", ",", [-1, -9.99, -0.99]]]
