Removed an unbelievable amount of async mess

--- a/python_indrajala/examples/config/indrajala.sample.toml
+++ b/python_indrajala/examples/config/indrajala.sample.toml
@@ -4,6 +4,7 @@
 [indrajala]
 application="default"
 systemd=false
+loglevel='info'
 modules=["in_async_mqtt","in_postgresql","in_signal_server","in_async_websockets", "in_csv_tree"]
 
 # Signal server makes sure that only one instance of indrajala
