--- a/python_indrajala/examples/config/indrajala.sample.toml
+++ b/python_indrajala/examples/config/indrajala.sample.toml
@@ -6,7 +6,7 @@ application="default"
 systemd=false
 loglevel_console="info"
 loglevel_logfile="debug"
-modules=["in_async_mqtt","in_postgresql","in_signal_server","in_async_websockets", "in_csv_tree"]
+modules=["in_async_mqtt","in_async_postgres","in_signal_server","in_async_websockets", "in_csv_tree"]
 
 # Signal server makes sure that only one instance of indrajala
 # is running per host (using a default socket). It cana shutdown
@@ -16,7 +16,7 @@ active=true
 signal_port=17417
 
 # Postgresql storage
-[in_postgresql]
+[in_async_postgres]
 active=true
 connection="host='database-hostname' dbname='testdb' user='some-user'"
 
