--- a/python_indrajala/examples/config/indrajala.sample.toml
+++ b/python_indrajala/examples/config/indrajala.sample.toml
@@ -19,6 +19,7 @@ signal_port=17417
 [in_async_postgres]
 active=true
 connection="host='database-hostname' dbname='testdb' user='some-user'"
+disable_synchronous_commits=true
 
 # Alternative storage backend based on files
 [in_indrajala]
@@ -32,7 +33,7 @@ rootpath="<some-path>/indrajala/python_indrajala/examples/csv_tree"
 # MQTT interface based on PAHO MQTT
 [in_async_mqtt]
 active=false
-startup_delay_sec=20
+startup_delay_sec=10
 broker="mqtt-server-hostname"
 topics=["#"]
 
