--- a/python_indrajala/examples/indrajala_sample.service
+++ b/python_indrajala/examples/indrajala_sample.service
@@ -8,9 +8,9 @@ After=network-online.target
 [Service]
 Type=simple
 # Adapt path!
-WorkingDirectory=<some-path>/indrajala/python_indrajala/examples
+WorkingDirectory=<some-path>/indrajala
 # Adapt paths!
-ExecStart=/usr/bin/python <some-path>/indrajala/python_indrajala/src/indrajala/indrajala.py -c <some-path>/indrajala/python_indrajala/examples/config -l <some-path>/indrajala/python_indrajala/examples/log
+ExecStart=/usr/bin/python <some-path>/indrajala/indrajala.py -c <some-path>/config
 
 [Install]
 WantedBy=multi-user.target
