Proper per-module logging

--- a/python_indrajala/examples/indrajala_sample.service
+++ b/python_indrajala/examples/indrajala_sample.service
@@ -4,6 +4,10 @@
 Description=Indrajala service
 After=network.target
 After=network-online.target
+# if local database is used:
+# After=postgresql.target
+# if local mosquitto is used:
+# After=mosquitto.target
 
 [Service]
 Type=simple
