--- a/python_indrajala/examples/config/indrajala.sample.toml
+++ b/python_indrajala/examples/config/indrajala.sample.toml
@@ -4,8 +4,9 @@
 [indrajala]
 application="default"
 systemd=false
-loglevel_console="info"
-loglevel_logfile="debug"
+max_loglevel_console="DEBUG"
+max_loglevel_logfile="DEBUG"
+loglevel="INFO"
 modules=["in_async_mqtt","in_async_postgres","in_signal_server","in_async_websockets", "in_csv_tree"]
 
 # Signal server makes sure that only one instance of indrajala
@@ -13,26 +14,31 @@ modules=["in_async_mqtt","in_async_postgres","in_signal_server","in_async_websoc
 # other instances (see -k startup option)
 [in_signal_server]
 active=true
+loglevel="INFO"
 signal_port=17417
 
 # Postgresql storage
 [in_async_postgres]
 active=true
+loglevel="INFO"
 connection="host='database-hostname' dbname='testdb' user='some-user'"
 disable_synchronous_commits=false
 
 # Alternative storage backend based on files
 [in_indrajala]
 active=false
+loglevel="INFO"
 rootpath=""
 
 [in_csv_tree]
 active=true
+loglevel="INFO"
 rootpath="<some-path>/indrajala/python_indrajala/examples/csv_tree"
 
 # MQTT interface based on PAHO MQTT
 [in_async_mqtt]
 active=false
+loglevel="INFO"
 startup_delay_sec=10
 broker="mqtt-server-hostname"
 topics=["#"]
@@ -40,6 +46,7 @@ topics=["#"]
 # Websockets
 [in_async_websockets]
 active=true
+loglevel="INFO"
 port=23577
 bind_address="0.0.0.0"
 ssl=true
