--- a/python_indrajala/examples/config/indrajala.sample.toml
+++ b/python_indrajala/examples/config/indrajala.sample.toml
@@ -7,7 +7,7 @@ systemd=false
 max_loglevel_console="DEBUG"
 max_loglevel_logfile="DEBUG"
 loglevel="INFO"
-logdir="{configdir}/log
+logdir="{configdir}/log"
 log_rotate_days=2
 modules=["in_async_mqtt","in_async_postgres","in_signal_server","in_async_websockets", "in_csv_tree"]
 
