--- a/rust_indrajala/indrajala/Cargo.toml
+++ b/rust_indrajala/indrajala/Cargo.toml
@@ -10,3 +10,5 @@ async-std = "1.9"
 paho-mqtt = "0.12"
 toml = "0.7"
 async-channel = "1.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
