--- a/rust_indrajala/indrajala/Cargo.toml
+++ b/rust_indrajala/indrajala/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = "1.9"
-paho-mqtt = "0.12"
-toml = "0.7"
-async-channel = "1.8"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-chrono = "0.4"
+async-std = "*"
+paho-mqtt = "*"
+toml = "*"
+async-channel = "*"
+serde = { version = "*", features = ["derive"] }
+serde_json = "*"
+chrono = "*"
+chrono-tz = "*"
