--- a/rust_indrajala/indrajala/Cargo.toml
+++ b/rust_indrajala/indrajala/Cargo.toml
@@ -16,4 +16,4 @@ chrono = "*"
 chrono-tz = "*"
 tide = "*"
 tide-rustls = "*"
-sqlx = { version = "0.6", features = ["runtime-async-std-rustls"] }
+sqlx = { version = "*", features = ["runtime-async-std-rustls", "sqlite"] }
