--- a/rust_indrajala/indrajala/Cargo.toml
+++ b/rust_indrajala/indrajala/Cargo.toml
@@ -17,3 +17,4 @@ chrono-tz = "*"
 tide = "*"
 tide-rustls = "*"
 sqlx = { version = "*", features = ["runtime-async-std-rustls", "sqlite"] }
+async-tungstenite = { version = "*", features = ["async-tls"] }
