--- a/rust_indrajala/indrajala/Cargo.toml
+++ b/rust_indrajala/indrajala/Cargo.toml
@@ -2,6 +2,7 @@
 name = "indrajala"
 version = "0.1.0"
 edition = "2021"
+default-run = "indrajala"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -18,3 +19,4 @@ tide = "*"
 tide-rustls = "*"
 sqlx = { version = "*", features = ["runtime-async-std-rustls", "sqlite"] }
 async-tungstenite = { version = "*", features = ["async-tls"] }
+futures = "*"
