--- a/rust_indrajala/indra_event/Cargo.toml
+++ b/rust_indrajala/indra_event/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "plotter"
+name = "indra_event"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-url = "*"
-tungstenite = "*"
+chrono = "*"
+serde = { version = "*", features = ["derive"] }
 serde_json = "*"
-indra_event = { path = "../../rust_indrajala/indra_event" }
