--- a/rust_indrajala/indrajala/Cargo.toml
+++ b/rust_indrajala/indrajala/Cargo.toml
@@ -7,6 +7,7 @@ default-run = "indrajala"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+indra_event = { path = "../../rust_indrajala/indra_event" }
 async-std = "*"
 paho-mqtt = "*"
 toml = "*"
