Tests, not useful

--- a/rust_indrajala/plotter/Cargo.toml
+++ b/rust_indrajala/plotter/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 url = "*"
 chrono = "*"
+plotters = "*"
 tungstenite = "*"
 serde_json = "*"
 indra_event = { path = "../../rust_indrajala/indra_event" }
