remove copilot plane-crash attempt of doing gui

--- a/rust_indrajala/plotter/Cargo.toml
+++ b/rust_indrajala/plotter/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+# plotters = "*"
 url = "*"
 chrono = "*"
-plotters = "*"
 tungstenite = "*"
 serde_json = "*"
 indra_event = { path = "../../rust_indrajala/indra_event" }
