--- a/rust_indrajala/plotter/Cargo.toml
+++ b/rust_indrajala/plotter/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 url = "*"
 chrono = "*"
+serde = "*"
+toml = "*"
 partial-min-max = "*"
 tungstenite = "*"
 serde_json = "*"
