Some first abort signal handling to enable safe shutdown

--- a/rust_indrajala/indrajala/Cargo.toml
+++ b/rust_indrajala/indrajala/Cargo.toml
@@ -22,3 +22,5 @@ tide-rustls = "*"
 sqlx = { version = "*", features = ["runtime-async-std-rustls", "sqlite"] }
 async-tungstenite = { version = "*", features = ["async-tls"] }
 futures = "*"
+signal-hook = "*"
+signal-hook-async-std = "*"
