--- a/config/indrajala.default.service
+++ b/config/indrajala.default.service
@@ -4,6 +4,7 @@ After=network.target mosquitto.service
 
 [Service]
 User=dsc
+Environment="RUST_LOG=warn"
 ExecStart=<insert_the_path_to_the_release_binary_here>/indrajala <insert_path_to_config_here>/indrajala/config/indrajala.toml
 Restart=always
 
