--- a/config/indrajala.sample.rust.toml
+++ b/config/indrajala.sample.rust.toml
@@ -117,3 +117,17 @@ default_domain = "$event/tasker/julia_1"
 ipc = "Stdio"
 out_topics = ["$task/julia_1/#", "$cmd/task/julia_1/#"]
 out_blocks = []
+
+[[tasker]]
+name = "Llama.1"
+active = true
+capa = ["Receive", "Send", "Request"]
+id = "llama_server"
+cmd = "/home/dsc/gith/llama.cpp/build/bin/server"
+args = ["-m", "/home/dsc/gith/llama.cpp/models/7B/ggml-model-q5_1.bin", "--ctx_size", "2048"]
+mode = "Periodic"
+interval = "15s"
+default_domain = ""
+ipc = "Stdio"
+out_topics = ["$task/llama/server/#"]
+out_blocks = []
