--- a/config/indrajala.sample.rust.toml
+++ b/config/indrajala.sample.rust.toml
@@ -123,8 +123,8 @@ name = "Llama.1"
 active = true
 capa = ["Receive", "Send", "Request"]
 id = "llama_server"
-cmd = "/home/dsc/gith/llama.cpp/build/bin/server"
-args = ["-m", "/home/dsc/gith/llama.cpp/models/7B/ggml-model-q5_1.bin", "--ctx_size", "2048"]
+cmd = "config/models/llama/server"
+args = ["-m", "config/models/llama/7B/ggml-model-q5_1.bin", "--ctx_size", "2048"]
 mode = "Periodic"
 interval = "15s"
 default_domain = ""
