--- a/rust_indrajala/indrajala/Cargo.toml
+++ b/rust_indrajala/indrajala/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "indrajala"
+rust-version = "1.71"
 version = "0.1.0"
 edition = "2021"
 default-run = "indrajala"
@@ -7,6 +8,7 @@ default-run = "indrajala"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+async-trait = "*"  # it stable tool-chain is used!
 indra_event = { path = "../../rust_indrajala/indra_event" }
 async-std = "*"
 uuid = { version = "*", features = ["v4"] }
@@ -33,5 +35,5 @@ signal-hook-async-std = "*"
 log = "*"
 env_logger = "*"
 
-# llm = "*"
+# llm = "0.1.1"
 llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
