paleo/historical/geo/wiki dataset parser modernized

--- a/python_indrajala/importers/geodata/data_sources/DWDGermanJuneMeanTemperature.toml
+++ b/python_indrajala/importers/geodata/data_sources/DWDGermanJuneMeanTemperature.toml
@@ -5,7 +5,7 @@ authors = ["DWD OpenData"]
 publication_date = "2022-07-02"
 publisher = "DWD OpenData"
 id = ""
-indra_id = "dwd/meantemp"
+indra_id = "dwd/meantemp/germany/june"
 indra_domain = "$event/geodata/germany/{indra_id}/"
 version = ""
 data_source = "https://opendata.dwd.de/climate_environment/CDC/regional_averages_DE/monthly/air_temperature_mean/regional_averages_tm_06.txt"
