--- a/rust_indrajala/indra_event/Cargo.toml
+++ b/rust_indrajala/indra_event/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2021"
 
 [dependencies]
 chrono = "*"
-serde = { version = "*", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "*"
+
+# [features]
+# proc-macro = ["serde_derive"]
