--- a/python_indrajala/importers/geodata/data_sources/MaunaLoaCO2MonthlyMean.toml
+++ b/python_indrajala/importers/geodata/data_sources/MaunaLoaCO2MonthlyMean.toml
@@ -18,7 +18,7 @@ manualoaco2monthlymean = [
     "decode('utf-8')",
     "remove_comments('#')",
     "pandas_csv_separator_nan(',', [-1, -9.99, -0.99])",
-    "df['time_jd_start']=fracyear2julia(df['decimal date'])",
+    "df['time_jd_start']=df['decimal date']",
     "df['mean/co'] = df['average']",
     "df['deseasonalized/co2'] = df['deseasonalized']",
     "indra_import(time='time_jd_start', column='mean/co')",
