--- a/rust_indrajala/indrajala/Cargo.toml
+++ b/rust_indrajala/indrajala/Cargo.toml
@@ -41,6 +41,7 @@ env_logger = "*"
 num_cpus = "*"
 
 # llm = "0.1.1"
-llm = { git = "https://github.com/rustformers/llm", branch = "main", features = [
-    "metal",
-] }
+llm = { git = "https://github.com/rustformers/llm", branch = "main" }
+# llm = { git = "https://github.com/rustformers/llm", branch = "main", features = [
+#     "metal",
+# ] }
