--- a/rust_indrajala/indrajala/Cargo.toml
+++ b/rust_indrajala/indrajala/Cargo.toml
@@ -13,6 +13,7 @@ sqlx = { version = "0.7", features = [
     "sqlite",
     "macros",
 ] }
+reqwest = "*"
 # native-tls = "*"
 async-tls = "*"             # { version = "*", features = ["server"]}
 async-tungstenite = "*"     # { version = "*", features = ["async-tls", "async-std-runtime"] }
